<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/blue_200"
        android:elevation="16dp"
        android:orientation="horizontal"
        app:strokeColor="@color/green"
        app:strokeWidth="2dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <Button
            android:id="@+id/weatherButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:backgroundTint="@color/blue_200"
            android:text="@string/update_weather"
            android:textColor="@color/orange_700"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:icon="@drawable/ic_thermometer_half"
            app:iconGravity="start"
            app:iconPadding="0dp"
            app:iconSize="24dp"
            app:iconTint="@color/orange_700"
            app:layout_constraintBottom_toTopOf="@+id/newsButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/blue_400"
        android:elevation="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <Button
            android:id="@+id/newsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:backgroundTint="@color/blue_400"
            android:text="@string/update_news"
            android:textColor="@color/orange_700"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            app:icon="@drawable/ic_newspaper"
            app:iconSize="24dp"
            app:iconTint="@color/orange_700"
            app:layout_constraintBottom_toTopOf="@+id/techButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weatherButton" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/blue_500"
        android:elevation="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <Button
            android:id="@+id/techButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:backgroundTint="@color/blue_500"
            android:text="@string/tech"
            android:textColor="@color/orange_700"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            app:icon="@drawable/ic_hdd"
            app:iconSize="25dp"
            app:iconTint="@color/orange_700"
            app:layout_constraintBottom_toTopOf="@+id/todoButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newsButton" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/blue_700"
        android:elevation="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <Button
            android:id="@+id/sportButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:backgroundTint="@color/blue_700"
            android:text="@string/sport"
            android:textColor="@color/orange_700"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            app:icon="@drawable/ic_sports_12"
            app:iconSize="30dp"
            app:iconTint="@color/orange_700"
            app:layout_constraintBottom_toTopOf="@+id/todoButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newsButton" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/orange_200"
        android:elevation="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <Button
            android:id="@+id/todoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:backgroundTint="@color/orange_200"
            android:text="@string/todo"
            android:textColor="@color/blue_700"
            android:textSize="24sp"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            app:icon="@drawable/ic_list_task"
            app:iconSize="24dp"
            app:iconTint="@color/blue_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/techButton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>
</LinearLayout>